<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context=".MainActivity1">

    <TextView
        android:id="@+id/textViewMyTitle"
        android:text="@string/my_title"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/buttonSpotifyStreamer"
        android:text="@string/spotify_streamer"
        android:layout_width="@dimen/medium_button_layout_width"
        android:layout_height="@dimen/medium_button_layout_height"
        android:layout_gravity="center"
        android:layout_below="@id/textViewMyTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_padding"
        android:background="#FF9900"
        android:onClick="onButtonClicked"
        />

    <Button
        android:id="@+id/buttonScoresApp"
        android:text="@string/scores_app"
        android:layout_width="@dimen/medium_button_layout_width"
        android:layout_height="@dimen/medium_button_layout_height"
        android:layout_gravity="center"
        android:layout_below="@id/buttonSpotifyStreamer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_padding"
        android:background="#FF9900"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/buttonLibraryApp"
        android:text="@string/library_app"
        android:layout_width="@dimen/medium_button_layout_width"
        android:layout_height="@dimen/medium_button_layout_height"
        android:layout_gravity="center"
        android:layout_below="@id/buttonScoresApp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_padding"
        android:background="#FF9900"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/buttonBuildBigger"
        android:text="@string/build_bigger"
        android:layout_width="@dimen/medium_button_layout_width"
        android:layout_height="@dimen/medium_button_layout_height"
        android:layout_gravity="center"
        android:layout_below="@id/buttonLibraryApp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_padding"
        android:background="#FF9900"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/buttonBaconReader"
        android:text="@string/bacon_reader"
        android:layout_width="@dimen/medium_button_layout_width"
        android:layout_height="@dimen/medium_button_layout_height"
        android:layout_gravity="center"
        android:layout_below="@id/buttonBuildBigger"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_padding"
        android:background="#FF9900"
        android:onClick="onButtonClicked"
        />

    <Button
        android:id="@+id/buttonCapStone"
        android:text="@string/capStone"
        android:layout_width="@dimen/medium_button_layout_width"
        android:layout_height="@dimen/medium_button_layout_height"
        android:layout_gravity="center"
        android:layout_below="@id/buttonBaconReader"
        android:layout_centerHorizontal="true"
        android:background="#CC5490"
        android:onClick="onButtonClicked"/>



</RelativeLayout>
